# LinuxCleaner

./: .gitignore  README.md  pyproject.toml
src/: gui.py  main.py
src/core/: cleaner.py  gui_functions.py
src/interfaces/: cli.py  gui.py
src/linuxcleaner/: main.py
src/linuxcleaner/core/: cleaner.py  gui_functions.py
src/linuxcleaner/interfaces/: cli.py  gui.py
