[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-cleaner"
version = "0.1.0"
description = "Linux cache cleaner written in Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }

dependencies = [
    "customtkinter",
    "pillow"
]

[project.scripts]
linux-cleaner = "linuxcleaner.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
